feat: Ajout des résistances en fonction des talents

--- a/templates/views/dex.jinja
+++ b/templates/views/dex.jinja
@@ -176,7 +176,7 @@
                                         {% elif resistance.multiplier == 0 %}
                                             <p class="pkm-tab-resistance" style="background-color: #7f8c8d;">0</p>
                                         {% else %}
-                                            <p class="pkm-tab-resistance" style="background-color: var(--primary-background-color);">{{ resistance.multiplier }}</p>
+                                            <p class="pkm-tab-resistance" style="background-color: var(--primary-background-color);">1</p>
                                         {% endif %}
                                     </div>
                                 {% endfor %}
