feat: Ajout des résistances jusqu'au 100ème PKM

--- a/templates/base.jinja
+++ b/templates/base.jinja
@@ -10,6 +10,7 @@
         <title>Tyradex - Une API Pokémon en français</title>
         <link rel="icon" type="image/png" href="/assets/logo.png">
 
+        <meta property="og:title" content="Tyradex - Une API Pokémon en français">
         <meta property="og:site_name" content="Tyradex">
         <meta property="og:type" content="website">
         <meta property="og:url" content="https://tyradex.vercel.app/">
