feat: Changement du domaine utilisé par l'API

--- a/templates/base.jinja
+++ b/templates/base.jinja
@@ -12,8 +12,8 @@
 
         <meta property="og:site_name" content="Tyradex">
         <meta property="og:type" content="website">
-        <meta property="og:url" content="https://tyradex.tech/">
-        <meta property="og:image" content="https://tyradex.tech/assets/logo.png">
+        <meta property="og:url" content="https://tyradex.app/">
+        <meta property="og:image" content="https://tyradex.app/assets/logo.png">
         <meta property="og:description" content="Découvrez notre API Pokémon en français pour accéder à une multitude d'informations sur les Pokémon. Explorez notre Pokédex complet et obtenez des données précises sur vos Pokémon préférés.">
 
         <link rel="stylesheet" type="text/css" href="/assets/css/styles.css">
